Primeira parte implementada com a persistencia dos objetos simples que compõe o Açai
Primeira parte implementada com a persistencia dos objetos simples que compõe o Açai

--- a/acaidahora/src/main/resources/application.properties
+++ b/acaidahora/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port=8090
 
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:ip_mysql}:3306/base_mysql
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:191.252.221.148}:3306/teste_acai
+spring.datasource.username=remoto
+spring.datasource.password=Y5^#.97pediP
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
