Finalização de implementação do Controller de Pedidos
Finalização de implementação do Controller de Pedidos

--- a/acaidahora/src/main/resources/application.properties
+++ b/acaidahora/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8090
 #server.ssl.ciphers=ECDHE_RSA_WITH_AES_256_CBC_SHA384,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_256_CBC_SHA256,TLS_RSA_WITH_AES_256_CBC_SHA
 #server.ssl.protocol=TLS
 
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:191.252.221.148}:3306/teste_acai
 spring.datasource.username=remoto
